fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  padding-bottom: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
